--- a/anagram-generator/package.json
+++ b/anagram-generator/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
@@ -17,6 +16,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "resolutions": {
+      "@babel/runtime": "7.0.0-beta.46"
+    },
   "browserslist": [
     ">0.2%",
     "not dead",
